# privacy-pii-redactor

./: .coverage  .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_redaction.py  custom_recognizer.py  llm_proxy.py
src/pii_redactor/: __init__.py  cli.py  config.py  models.py
src/pii_redactor/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
src/pii_redactor/detection/: __init__.py  conflict_resolver.py  detector.py  presidio_detector.py  regex_detector.py  spacy_detector.py
src/pii_redactor/proxy/: __init__.py  base.py  openai_compatible.py
src/pii_redactor/redaction/: __init__.py  placeholders.py  redactor.py  restorer.py
src/pii_redactor/storage/: __init__.py  base.py  memory.py  redis.py
tests/: conftest.py  test_api.py  test_cli.py  test_conflicts.py  test_custom_recognizers.py  test_detection.py  test_models.py  test_redaction.py  test_restoration.py  test_storage.py
