[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privacy-pii-redactor"
version = "0.1.0"
description = "A self-hosted Python proxy that detects and removes sensitive data before prompts reach external AI providers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["pii", "privacy", "redaction", "llm", "ai", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "redis>=5.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "fakeredis>=2.21",
]

[project.scripts]
pii-redactor = "pii_redactor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pii_redactor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
